--- a/_pc_header.html
+++ b/_pc_header.html
@@ -209,23 +209,18 @@
             <!-- loop list -->
             <li data-index="0">
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg" />
+                    <img src="http://www.carimakan.id/upload/admin/2018/01/22/3235370de55ee266b0e9bcd9f3f1fb75.png">
                 </a>
             </li>
             <!--/ end loop list -->
             <li data-index="1">
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg" />
+                    <img src="http://www.carimakan.id/upload/admin/2018/01/22/7a37ccfa259df6faae142f7ff5f2dff6.png">
                 </a>
             </li>
             <li data-index="2">
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg" />
-                </a>
-            </li>
-            <li data-index="3">
-                <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg" />
+                    <img src="http://www.carimakan.id/upload/admin/2018/01/22/0699480f09d642bd9fd1f112ab891ca7.png">
                 </a>
             </li>
         </ul>
@@ -233,7 +228,6 @@
             <li class="flag" data-index="0"></li>
             <li class="flag" data-index="1"></li>
             <li class="flag" data-index="2"></li>
-            <li class="flag" data-index="3"></li>
         </ul>
     </section>
     <!--/ end banner -->
