--- a/_shoplist.html
+++ b/_shoplist.html
@@ -28,10 +28,16 @@
                     </i>
                     <!--/ end ui_icon icon_stars -->
 
-                    <!-- comment -->
-                    <div class="comment block">
-                        comment Reviews
+                    <!-- score -->
+                    <div class="block score">
+                        4.2
                     </div>
+                    <!--/ end score -->
+
+                    <!-- comment -->
+                    <!-- <div class="comment block">
+                        comment Reviews
+                    </div> -->
                     <!--/ end comment -->
                 </div>
                 <!--/ end comments -->
@@ -39,10 +45,17 @@
                 <!-- info -->
                 <div class="info">
                     <!-- price -->
-                    <div class="price block">price</div>
+                    <!-- <div class="price block">price</div> -->
                     <!--/ end price -->
                     <!-- cate -->
-                    <div class="cate block">cate</div>
+                    <div class="cate block">
+                        <div class="content">
+                            <label class="title">
+                                Masakan
+                            </label>
+                            <p class="txt">Italian</p>
+                        </div>
+                    </div>
                     <!--/ end cate -->
                 </div>
                 <!--/ end info -->
@@ -50,7 +63,14 @@
                 <!-- region -->
                 <div class="region">
                     <!-- address -->
-                    <div class="address block">address</div>
+                    <div class="address block">
+                        <div class="content">
+                            <label class="title">
+                                Lokasi
+                            </label>
+                            <p class="txt">Bogor Selatan</p>
+                        </div>
+                    </div>
                     <!--/ end address -->
                     <!-- position -->
                     <div class="position block">position</div>
