--- a/pc_photos.html
+++ b/pc_photos.html
@@ -167,14 +167,24 @@
                     <!-- content -->
                     <div class="content">
                         <!-- list -->
-                        <ul class="list">
+                        <ul class="list ui_list">
                             <!-- loop list -->
                             <li>
                                 <div class="img">
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                                 </div>
                             </li>
                             <!--/ end loop list -->
+                            <li>
+                                <div class="img">
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/96/a6ecffd5e403cad0f0959eb91abed0c6.png" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/46/2671aafc3c4e8708ca1a76fec3306743.png" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                </div>
+                            </li>
                         </ul>
                         <!--/ end list -->
 
