--- a/pc_restaurant.html
+++ b/pc_restaurant.html
@@ -131,7 +131,7 @@
                             <!-- img -->
                             <div class="img">
                                 <!-- img size: 465 * 465 -->
-                                <img src="/images/placeholder_cover.jpg" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                             </div>
                             <!--/ end img -->
                         </div>
@@ -141,14 +141,14 @@
                             <!-- img -->
                             <div class="img">
                                 <!-- img size: 230 * 230 -->
-                                <img src="/images/placeholder_cover.jpg" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/46/2671aafc3c4e8708ca1a76fec3306743.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                             </div>
                             <!--/ end img -->
 
                             <!-- img -->
                             <div class="img">
                                 <!-- img size: 230 * 230 -->
-                                <img src="/images/placeholder_cover.jpg" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/96/a6ecffd5e403cad0f0959eb91abed0c6.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
 
                                 <!-- more -->
                                 <a href="/photos.html" class="more">
@@ -197,10 +197,10 @@
                                 <!-- info -->
                                 <li class="info">
                                     <svg class="ui_icon ui_icon_svg">
-                                        <use xlink:href="#icon_money"></use>
+                                        <use xlink:href="#icon_shop"></use>
                                     </svg>
                                     <span>
-                                        Rp 15k/ Orang  ‧  Italian Cuisines
+                                        Italian, Fast Food
                                     </span>
                                 </li>
                                 <!--/ end info -->
@@ -568,6 +568,47 @@
 
                         <!-- sidebar -->
                         <div class="sidebar">
+                            <!-- ui_block menu -->
+                            <div class="ui_block menu">
+                                <!-- title -->
+                                <h2 class="title">
+                                    Menu
+                                </h2>
+                                <!-- / end title -->
+                                <!-- content -->
+                                <div class="content">
+                                    <!-- list -->
+                                    <ul class="list ui_list">
+                                        <!-- loop list -->
+                                        <li>
+                                            <div class="img">
+                                                <!-- img size: 110 * 110 -->
+                                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
+                                            </div>
+                                        </li>
+                                        <!--/ end loop list -->
+                                        <li>
+                                            <div class="img">
+                                                <!-- img size: 110 * 110 -->
+                                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="img">
+                                                <!-- img size: 110 * 110 -->
+                                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
+                                                <span class="tips">
+                                                    View All (7)
+                                                </span>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <!--/ end list -->
+                                </div>
+                                <!--/ end content -->
+                            </div>
+                            <!-- / end ui_block menu -->
+
                             <!-- ui_block dishes -->
                             <div class="ui_block dishes">
                                 <!-- title -->
