--- a/_postlist.html
+++ b/_postlist.html
@@ -31,7 +31,7 @@
             <!-- img -->
             <div class="img">
                 <!-- img size: 140*90 -->
-                <img src="/images/placeholder_cover.jpg" />
+                <img src="http://www.carimakan.id/upload/portal/2018/01/12/5f750fdbac2a13b1416f77b7d2a2014a.jpg" />
             </div>
             <!--/ end img -->
 
@@ -56,7 +56,7 @@
             <!-- img -->
             <div class="img">
                 <!-- img size: 140*90 -->
-                <img src="/images/placeholder_cover.jpg" />
+                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/45/60ef40cd4a1709174abcd0eae12da50b.jpg" />
             </div>
             <!--/ end img -->
 
