--- a/_postlist.html
+++ b/_postlist.html
@@ -3,7 +3,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="/images/placeholder_cover.jpg" />
             </div>
@@ -29,7 +29,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="http://www.carimakan.id/upload/portal/2018/01/12/5f750fdbac2a13b1416f77b7d2a2014a.jpg" />
             </div>
@@ -54,7 +54,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/45/60ef40cd4a1709174abcd0eae12da50b.jpg" />
             </div>
@@ -79,7 +79,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="/images/placeholder_cover.jpg" />
             </div>
@@ -104,7 +104,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="/images/placeholder_cover.jpg" />
             </div>
@@ -129,7 +129,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="/images/placeholder_cover.jpg" />
             </div>
@@ -154,7 +154,7 @@
     <li>
         <a href="/post.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 140*90 -->
                 <img src="/images/placeholder_cover.jpg" />
             </div>
