--- a/_shoplist.html
+++ b/_shoplist.html
@@ -4,7 +4,7 @@
     <li>
         <a href="/restaurant.html">
             <!-- img -->
-            <div class="img">
+            <div class="img rsimg">
                 <!-- img size: 95*95 -->
                 <img src="/images/placeholder_cover.jpg">
             </div>
