--- a/voucher.html
+++ b/voucher.html
@@ -134,7 +134,7 @@
                     <!-- content -->
                     <div class="content">
                         <!-- img -->
-                        <div class="img">
+                        <div class="img rsimg">
                             <img src="http://p1.meituan.net/poirichness/menu_11479032_460955583.jpg%40249w_249h_1e_1c_1l%7Cwatermark%3D1%26%26r%3D1%26p%3D9%26x%3D2%26y%3D2%26relative%3D1%26o%3D20">
                         </div>
                         <!--/ end img -->
