--- a/_shoplist.html
+++ b/_shoplist.html
@@ -6,7 +6,7 @@
             <!-- img -->
             <div class="img rsimg">
                 <!-- img size: 95*95 -->
-                <img src="/images/placeholder_cover.jpg">
+                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png">
             </div>
             <!--/ end img -->
             <!-- content -->
