--- a/pc_restaurant.html
+++ b/pc_restaurant.html
@@ -129,7 +129,7 @@
                         <!-- block -->
                         <div class="block">
                             <!-- img -->
-                            <div class="img">
+                            <div class="img rsimg">
                                 <!-- img size: 465 * 465 -->
                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                             </div>
@@ -139,14 +139,14 @@
                         <!-- block -->
                         <div class="block">
                             <!-- img -->
-                            <div class="img">
+                            <div class="img rsimg">
                                 <!-- img size: 230 * 230 -->
                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/46/2671aafc3c4e8708ca1a76fec3306743.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                             </div>
                             <!--/ end img -->
 
                             <!-- img -->
-                            <div class="img">
+                            <div class="img rsimg">
                                 <!-- img size: 230 * 230 -->
                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/96/a6ecffd5e403cad0f0959eb91abed0c6.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
 
@@ -581,20 +581,20 @@
                                     <ul class="list ui_list">
                                         <!-- loop list -->
                                         <li>
-                                            <div class="img">
+                                            <div class="img rsimg">
                                                 <!-- img size: 110 * 110 -->
                                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
                                             </div>
                                         </li>
                                         <!--/ end loop list -->
                                         <li>
-                                            <div class="img">
+                                            <div class="img rsimg">
                                                 <!-- img size: 110 * 110 -->
                                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="img">
+                                            <div class="img rsimg">
                                                 <!-- img size: 110 * 110 -->
                                                 <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
                                                 <span class="tips">
@@ -623,9 +623,9 @@
                                         <!-- loop list -->
                                         <li>
                                             <!-- img -->
-                                            <div class="img">
+                                            <div class="img rsimg">
                                                 <!-- img size: 110 * 110 -->
-                                                <img src="/images/placeholder_cover.jpg" />
+                                                <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" />
                                             </div>
                                             <!--/ end img -->
                                             <!-- content -->
@@ -725,7 +725,7 @@
     <!--/ end layout js -->
 
     <!-- restaurant js -->
-    <script type="text/javascript" src="/js/pc/restaurant.js"></script>
+    <!-- <script type="text/javascript" src="/js/pc/restaurant.js"></script> -->
     <script type="text/javascript">
         var mapObjID = 'googleMaps',
             // 當前標記
