--- a/restaurant.html
+++ b/restaurant.html
@@ -204,9 +204,9 @@
                             <!-- block -->
                             <div class="block">
                                 <!-- img -->
-                                <div class="img">
-                                    <!-- img size: 250 * 250 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <div class="img rsimg">
+                                    <!-- img size: 465 * 465 -->
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/59/8828a50dfb8b9557758a8064f127f44a.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                                 </div>
                                 <!--/ end img -->
                             </div>
@@ -214,16 +214,16 @@
                             <!-- block -->
                             <div class="block">
                                 <!-- img -->
-                                <div class="img">
-                                    <!-- img size: 124 * 124 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <div class="img rsimg">
+                                    <!-- img size: 230 * 230 -->
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/46/2671aafc3c4e8708ca1a76fec3306743.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
                                 </div>
                                 <!--/ end img -->
 
                                 <!-- img -->
-                                <div class="img">
-                                    <!-- img size: 124 * 124 -->
-                                    <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" class="btn_photosbox" data-src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
+                                <div class="img rsimg">
+                                    <!-- img size: 230 * 230 -->
+                                    <img src="http://www.carimakan.id/upload/shop/2018/01/20/19/96/a6ecffd5e403cad0f0959eb91abed0c6.png" class="btn_photosbox" data-src="/images/placeholder_cover.jpg" data-name="Sarah Lawson" data-time="12 Mar 2017" data-title="Cream Cheese Strawberry Waffles" />
 
                                     <!-- more -->
                                     <a href="/photos.html" class="more">
@@ -361,7 +361,7 @@
                             </li>
                             <!--/ end loop list -->
                             <li class="hasimg">
-                                <div class="img">
+                                <div class="img rsimg">
                                     <!-- img size: 110 * 110 -->
                                     <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
                                     <span class="like">
